[gd_scene load_steps=18 format=2]

[ext_resource path="res://laberinto.gd" type="Script" id=1]
[ext_resource path="res://inventario.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/laberinto/laberinto_0.jpg" type="Texture" id=3]
[ext_resource path="res://personaje.gd" type="Script" id=4]
[ext_resource path="res://assets/laberinto/pugliese.jpg" type="Texture" id=5]
[ext_resource path="res://assets/laberinto/cup.png" type="Texture" id=6]
[ext_resource path="res://assets/laberinto/violin.png" type="Texture" id=7]
[ext_resource path="res://assets/laberinto/contrabajo.png" type="Texture" id=8]
[ext_resource path="res://assets/laberinto/badoneon.png" type="Texture" id=9]
[ext_resource path="res://sonidos.gd" type="Script" id=10]
[ext_resource path="res://assets/sonidos_ui/walk.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sonidos_ui/collision.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sonidos_ui/itemCollected.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sonidos_ui/win.wav" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="GDScript" id=2]

script/source = "
extends KinematicBody2D

func _ready():
	#set_fixed_process(true)
	set_physics_process(true)
	
func _physics_process(delta):
	pass"

[sub_resource type="Animation" id=3]

resource_name = "mostrar"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 514, -100 ), Vector2( 514, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.06, 1.5, 3.33, 5.0, 9.57, 6.01, 0.0 ]
}

[node name="escena" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="inventario" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0

[node name="Sprite" parent="inventario" index="0"]

position = Vector2( 109.202, 28.4495 )

[node name="violin" parent="inventario" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0

[node name="Background" parent="inventario/violin" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0

[node name="Icon" parent="inventario/violin/Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0

[node name="Number" parent="inventario/violin/Background" index="1"]

anchor_left = 0.0
anchor_top = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0

[node name="contrabajo" parent="inventario" index="2"]

editor/display_folded = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0

[node name="Background" parent="inventario/contrabajo" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0

[node name="Icon" parent="inventario/contrabajo/Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0

[node name="Number" parent="inventario/contrabajo/Background" index="1"]

anchor_left = 0.0
anchor_top = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0

[node name="bandoneon" parent="inventario" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0

[node name="Background" parent="inventario/bandoneon" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0

[node name="Icon" parent="inventario/bandoneon/Background" index="0"]

anchor_left = 0.0
anchor_top = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0

[node name="Number" parent="inventario/bandoneon/Background" index="1"]

anchor_left = 0.0
anchor_top = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0

[node name="laberinto" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="img_laberinto" type="Sprite" parent="laberinto" index="0"]

position = Vector2( 613.748, 360.799 )
scale = Vector2( 0.677203, 0.677203 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="laberinto" index="1"]

visible = false
position = Vector2( 564.057, 352.003 )
scale = Vector2( 27.2065, 28.8451 )
build_mode = 0
polygon = PoolVector2Array( -5.97374, -8.30475, 14.5809, -8.25249, 14.6363, -7.99121, 11.3675, -7.8867, 11.2567, 9.67135, 10.9243, 9.56683, 10.8689, -7.8867, 4.10968, -7.83444, 4.16508, 0.578787, 3.55564, 0.578787, 3.55564, -7.83444, -5.97374, -7.83444 )

[node name="CollisionPolygon2D1" type="CollisionPolygon2D" parent="laberinto" index="2"]

position = Vector2( 612.881, 360.288 )
scale = Vector2( 35.2312, 35.0246 )
build_mode = 0
polygon = PoolVector2Array( 4.14094, -4.23568, 4.18372, 0.240108, 4.65434, 0.369218, 4.56877, -4.36479 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="laberinto" index="3"]

position = Vector2( 612.881, 360.288 )
scale = Vector2( 35.2312, 35.0246 )
build_mode = 0
polygon = PoolVector2Array( -9.93503, -4.45086, -1.16429, -4.45086, -1.16429, -4.14961, -9.84946, -4.10657 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="laberinto" index="4"]

position = Vector2( 612.881, 360.288 )
scale = Vector2( 35.2312, 35.0246 )
build_mode = 0
polygon = PoolVector2Array( -9.84946, -2.08386, -3.60299, -1.86868, -3.60299, 4.88804, -6.89736, 4.75893, -6.85458, 1.27298, -6.55509, 1.22995, -6.46952, 4.54375, -3.94526, 4.54375, -3.85969, -1.65349, -9.72111, -1.7826 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="laberinto" index="5"]

position = Vector2( 612.881, 360.288 )
scale = Vector2( 35.2312, 35.0246 )
build_mode = 0
polygon = PoolVector2Array( -9.72111, 7.12593, -1.37821, 7.12593, -1.421, -1.86868, -0.907587, -1.73957, -0.907587, 2.65015, 4.26929, 2.65015, 4.35485, 3.12355, -1.07873, 3.08051, -0.993155, 7.0829, 1.23162, 7.16897, 1.2744, 7.47022, -9.89225, 7.47022 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="laberinto" index="6"]

position = Vector2( 615.896, 360.288 )
scale = Vector2( 35.2312, 35.0246 )
build_mode = 0
polygon = PoolVector2Array( 2.47235, 5.3184, 4.2265, 5.36144, 4.2265, 9.49294, 3.88423, 9.4499, 3.84145, 5.53359, 2.47235, 5.57662 )

[node name="CollisionPolygon2D 2" type="CollisionPolygon2D" parent="laberinto" index="7"]

position = Vector2( -1.36035, -1.36038 )
build_mode = 0
polygon = PoolVector2Array( 268.245, 0.465073, 268.245, 14.0311, 960.111, 11.0164, 960.111, 705.897, 262.215, 705.897, 263.723, 18.5531, 250.157, 17.0458, 251.664, 714.941, 976.691, 714.941, 972.169, -11.5936 )

[node name="personaje" type="KinematicBody2D" parent="." index="2"]

position = Vector2( -6.02933, 4.522 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
_sections_unfolded = [ "collision" ]

[node name="img_personaje" type="Sprite" parent="personaje" index="0"]

position = Vector2( 322.288, 661.029 )
rotation = 0.0473274
scale = Vector2( 0.584082, 0.584082 )
texture = ExtResource( 5 )

[node name="collision_personaje" type="CollisionShape2D" parent="personaje" index="1"]

position = Vector2( 323.898, 663.984 )
rotation = 0.0286318
scale = Vector2( 2.6021, 2.74026 )
shape = SubResource( 1 )

[node name="meta" type="KinematicBody2D" parent="." index="3"]

position = Vector2( -6.02933, 4.522 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="meta" index="0"]

position = Vector2( 922.492, 68.0777 )
rotation = 0.0473274
scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 6 )

[node name="collision_meta" type="CollisionShape2D" parent="meta" index="1"]

position = Vector2( 918.988, 64.8693 )
rotation = 0.0286318
scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )

[node name="items" type="Node2D" parent="." index="4"]

[node name="violin" type="Control" parent="items" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="violin" type="KinematicBody2D" parent="items/violin" index="0"]

editor/display_folded = true
position = Vector2( -6.02936, 104.455 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="items/violin/violin" index="0"]

position = Vector2( 922.492, 68.0777 )
rotation = 0.0473274
scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 7 )

[node name="collision_meta" type="CollisionShape2D" parent="items/violin/violin" index="1"]

position = Vector2( 918.988, 64.8693 )
rotation = 0.0286318
scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )

[node name="contrabajo" type="Control" parent="items" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="contrabajo" type="KinematicBody2D" parent="items/contrabajo" index="0"]

position = Vector2( -400.21, 494.934 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="items/contrabajo/contrabajo" index="0"]

position = Vector2( 922.492, 68.0777 )
rotation = 0.0473274
scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 8 )

[node name="collision_meta" type="CollisionShape2D" parent="items/contrabajo/contrabajo" index="1"]

position = Vector2( 918.988, 64.8693 )
rotation = 0.0286318
scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )

[node name="bandoneon" type="Control" parent="items" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 102.0
margin_right = 290.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="bandoneon" type="KinematicBody2D" parent="items/bandoneon" index="0"]

position = Vector2( -400.21, 494.934 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="items/bandoneon/bandoneon" index="0"]

position = Vector2( 922.492, 68.0777 )
rotation = 0.0473274
scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 9 )

[node name="collision_meta" type="CollisionShape2D" parent="items/bandoneon/bandoneon" index="1"]

position = Vector2( 918.988, 64.8693 )
rotation = 0.0286318
scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )

[node name="bandoneon2" type="Control" parent="items" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -87.0
margin_top = -89.0
margin_right = -87.0
margin_bottom = -89.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="bandoneon" type="KinematicBody2D" parent="items/bandoneon2" index="0"]

position = Vector2( -400.21, 494.934 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = SubResource( 2 )

[node name="img_personaje" type="Sprite" parent="items/bandoneon2/bandoneon" index="0"]

position = Vector2( 922.492, 68.0777 )
rotation = 0.0473274
scale = Vector2( 0.146593, 0.146593 )
texture = ExtResource( 9 )

[node name="collision_meta" type="CollisionShape2D" parent="items/bandoneon2/bandoneon" index="1"]

position = Vector2( 918.988, 64.8693 )
rotation = 0.0286318
scale = Vector2( 3.35478, 3.5329 )
shape = SubResource( 1 )

[node name="ganaste" type="Node2D" parent="." index="5"]

[node name="Panel" type="Panel" parent="ganaste" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 514.0
margin_top = -100.0
margin_right = 693.0
margin_bottom = -45.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="anim" type="AnimationPlayer" parent="ganaste/Panel" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/mostrar = SubResource( 3 )
blend_times = [  ]

[node name="Label" type="Label" parent="ganaste/Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 3.0
margin_right = 63.0
margin_bottom = 21.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
text = "Ganaste!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="sonidos_laberinto" type="Node" parent="." index="6"]

pause_mode = 1
script = ExtResource( 10 )
is_playing = false

[node name="timerLargo" type="Timer" parent="sonidos_laberinto" index="0"]

process_mode = 0
wait_time = 0.5
one_shot = true
autostart = false

[node name="timerCorto" type="Timer" parent="sonidos_laberinto" index="1"]

process_mode = 0
wait_time = 0.15
one_shot = true
autostart = false

[node name="walk" type="AudioStreamPlayer2D" parent="sonidos_laberinto" index="2"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="collsion" type="AudioStreamPlayer2D" parent="sonidos_laberinto" index="3"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="item_collected" type="AudioStreamPlayer2D" parent="sonidos_laberinto" index="4"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="win" type="AudioStreamPlayer2D" parent="sonidos_laberinto" index="5"]

stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="musica" type="Node" parent="." index="7"]

pause_mode = 1

[connection signal="gane" from="." to="." method="_on_escena_gane"]

[connection signal="caminando" from="personaje" to="." method="_on_personaje_caminando"]

[connection signal="chocando" from="personaje" to="." method="_on_personaje_chocando"]


[editable path="inventario"]
